Only handle the first AccountAddedToCookie event in OneClickSigninSyncStarter

BUG=601048

Review URL: https://codereview.chromium.org/1862963003

Cr-Commit-Position: refs/heads/master@{#385749}

Former-commit-id: a95a409b9f1d29e963de1528220b7c607b45996f